k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: planera-production
  labels:
    name: planera-production
    environment: production
